[tool.poetry]
name = "gh-livetracker"
version = "0.1.0"
description = ""
authors = ["mikescor <mykytyn.mykhailo@gmail.com>"]
readme = "README.md"
packages = [{include = "gh_livetracker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
uvloop = "^0.17.0"
websockets = "^10.4"
wrapt = "^1.15.0"
httpx = "^0.23.3"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
